add v21 resource and update document

--- a/push-android/DroiPush/DroiPush.html
+++ b/push-android/DroiPush/DroiPush.html
@@ -5,20 +5,21 @@
 <title>DroiPush产品与集成说明</title>
 </head>
 <body>
-<div id="wmd-preview" class="wmd-preview"><div class="md-section-divider"></div><div class="md-section-divider"></div><h1 data-anchor-id="j6xu" id="droipush产品与集成说明">DroiPush产品与集成说明</h1><div class="md-section-divider"></div><h2 data-anchor-id="0hfl" id="简介">简介</h2><div class="md-section-divider"></div><h3 data-anchor-id="ic4w" id="什么是卓易推送">什么是卓易推送</h3><p data-anchor-id="vxik">卓易推送(DroiPush)是面向开发者提供的一种消息推送服务模块，应用开发者可以通过开放的API或者DroiBaaS管理后台向集成SDK的应用推送消息。</p><div class="md-section-divider"></div><h3 data-anchor-id="x14e" id="卓易推送优势">卓易推送优势</h3><ul data-anchor-id="epo3">
+<div id="wmd-preview" class="wmd-preview"><div class="md-section-divider"></div><div class="md-section-divider"></div><h1 data-anchor-id="oomw" id="droipush产品与集成说明">DroiPush产品与集成说明</h1><div class="md-section-divider"></div><h2 data-anchor-id="552e" id="简介">简介</h2><div class="md-section-divider"></div><h3 data-anchor-id="j8kb" id="什么是卓易推送">什么是卓易推送</h3><p data-anchor-id="b4lq">卓易推送(DroiPush)是面向开发者提供的一种消息推送服务模块，应用开发者可以通过开放的API或者DroiBaaS管理后台向集成SDK的应用推送消息。</p><div class="md-section-divider"></div><h3 data-anchor-id="zbss" id="卓易推送优势">卓易推送优势</h3><ul data-anchor-id="hdkq">
 <li><p>降低开发成本 <br>
 开发者只需简单集成卓易推送SDK，就可在短期内使应用具有推送的能力，免去了开发者额外投入大量人力、服务器资源。</p></li>
 <li><p>丰富的展现样式 <br>
 提供了多种默认消息展现样式，包含有普通的通知、图片通知以及大图通知，同时还支持自定义消息。</p></li>
 <li><p>节省耗电与网络流量 <br>
 使用UDP协议保证大量终端的在线连接与控制，在保证消息传递的前提下降低网络流量和耗电量。</p></li>
-</ul><div class="md-section-divider"></div><h3 data-anchor-id="4zm5" id="卓易推送工作原理">卓易推送工作原理</h3><p data-anchor-id="58q4"><img src="http://baastest.droi.cn/Uploads/DocFile/57636dc5c8116.png" alt="cmd-markdown-logo"></p><div class="md-section-divider"></div><h2 data-anchor-id="x47h" id="安装">安装</h2><div class="md-section-divider"></div><h3 data-anchor-id="nrri" id="安装sdk">安装SDK</h3><div class="md-section-divider"></div><h4 data-anchor-id="24kv" id="快速入门">快速入门</h4><p data-anchor-id="zja0">由于卓易推送SDK基于卓易CoreSDK，所以请在安装卓易推送SDK之前仔细阅读<a href="http://baastest.droi.cn/Index/docStart.html" target="_blank">快速入门</a>，并确保已经完成快速入门的所有步骤 。</p><div class="md-section-divider"></div><h4 data-anchor-id="mkj4" id="eclipse环境安装">Eclipse环境安装</h4><p data-anchor-id="ihi5"><a href="http://baastest.droi.cn/Index/download.html" target="_blank">下载卓易推送SDK</a>，解压后将 <code>droipushsdk.jar</code> 包导入到工程的 <code>libs</code> 目录下；右键工程根目录，选择<code>Properties</code> -&gt; <code>Java Build Path</code> -&gt; <code>Libraries</code>，然后点击<code>Add External JARs...</code> 选择指向jar的路径，点击OK，即导入成功。<strong>（ADT17及以上不需要手动导入）</strong>  </p><p data-anchor-id="nxgc">将<code>res</code>文件夹直接复制到工程目录下，和工程本身<code>res</code>目录合并。请不要随意删除其中的文件<strong>（<code>res</code>文件junyij均以dp开头）</strong>。</p><div class="md-section-divider"></div><h4 data-anchor-id="fh1q" id="android-studio环境安装">Android Studio环境安装</h4><p data-anchor-id="99mu">Android Studio环境下只需要在Project的<code>build.gradle</code>中添加如下依赖：</p><pre data-anchor-id="wgxu"><code>dependencies {
+</ul><div class="md-section-divider"></div><h3 data-anchor-id="71ah" id="卓易推送工作原理">卓易推送工作原理</h3><p data-anchor-id="lpl2"><img src="http://baastest.droi.cn/Uploads/DocFile/57636dc5c8116.png" alt="cmd-markdown-logo"></p><div class="md-section-divider"></div><h2 data-anchor-id="belm" id="安装">安装</h2><div class="md-section-divider"></div><h3 data-anchor-id="wtl4" id="安装sdk">安装SDK</h3><div class="md-section-divider"></div><h4 data-anchor-id="z3zd" id="快速入门">快速入门</h4><p data-anchor-id="d0m4">由于卓易推送SDK基于卓易CoreSDK，所以请在安装卓易推送SDK之前仔细阅读<a href="http://baastest.droi.cn/Index/docStart.html" target="_blank">快速入门</a>，并确保已经完成快速入门的所有步骤 。</p><div class="md-section-divider"></div><h4 data-anchor-id="ua3v" id="android-studio环境安装">Android Studio环境安装</h4><p data-anchor-id="73qp">Android Studio环境下只需要在Project的<code>build.gradle</code>中添加如下依赖：</p><pre data-anchor-id="8aby"><code>dependencies {
     /*其他依赖 */
-    compile 'com.droi.sdk:push:1.0.001'
+    compile 'com.droi.sdk:push:+'
     compile 'com.android.support:support-v4:23.3.0'
 }
-</code></pre><div class="md-section-divider"></div><h3 data-anchor-id="0o6s" id="组件与权限配置">组件与权限配置</h3><p data-anchor-id="f8d3">在 AndroidManifest.xml 中进行必要的配置 <br>
-组件配置  </p><pre data-anchor-id="s1lt"><code>    &lt;!--推送消息加密秘钥，应用创建后由平台自动生成，以下内容为示例--&gt;
+</code></pre><p data-anchor-id="6135"><strong>注意： <br>
+应用工程的build.gradle中需要配置应用包名字段<code>applicationId</code>，否则会影响推送；</strong>  </p><div class="md-section-divider"></div><h4 data-anchor-id="lecr" id="eclipse环境安装">Eclipse环境安装</h4><p data-anchor-id="h0u9"><a href="http://baastest.droi.cn/Index/download.html" target="_blank">下载卓易推送SDK</a>，解压后将 <code>droipushsdk.jar</code> 包导入到工程的 <code>libs</code> 目录下；右键工程根目录，选择<code>Properties</code> -&gt; <code>Java Build Path</code> -&gt; <code>Libraries</code>，然后点击<code>Add External JARs...</code> 选择指向jar的路径，点击OK，即导入成功。<strong>（ADT17及以上不需要手动导入）</strong>  </p><p data-anchor-id="udju">将<code>res</code>文件夹直接复制到工程目录下，和工程本身<code>res</code>目录合并。请不要随意删除其中的文件<strong>（<code>res</code>文件均以dp开头）</strong>。</p><p data-anchor-id="3nyt">在 AndroidManifest.xml 中进行必要的配置 <br>
+组件配置  </p><pre data-anchor-id="ycss"><code>    &lt;!--推送消息加密秘钥，应用创建后由平台自动生成，以下内容为示例--&gt;
     &lt;meta-data
         android:name="PUSH_MESSAGE_SECRET"
         android:value="YOUR_SECRET" &gt;
@@ -68,14 +69,14 @@
             &lt;action android:name="com.droi.sdk.push.action.SHOW_DETAIL" /&gt;
         &lt;/intent-filter&gt;
     &lt;/activity&gt;
-</code></pre><p data-anchor-id="mgx9"><strong>注意： <br>
-DroiPushService需要配置服务的版本号字段SERVICE_VERSION，否则可能会影响推送效果；</strong> </p><p data-anchor-id="mpc3">权限配置  </p><pre data-anchor-id="7fo2"><code>    &lt;!-- permission used in push sdk --&gt;
+</code></pre><p data-anchor-id="ap59"><strong>注意： <br>
+DroiPushService需要配置服务的版本号字段SERVICE_VERSION，否则可能会影响推送效果；</strong> </p><p data-anchor-id="kkj3">权限配置  </p><pre data-anchor-id="c3fn"><code>    &lt;!-- permission used in push sdk --&gt;
     &lt;uses-permission android:name="android.permission.WAKE_LOCK" /&gt;
     &lt;uses-permission android:name="android.permission.VIBRATE" /&gt;
     &lt;uses-permission android:name="android.permission.FLASHLIGHT" /&gt;
     &lt;uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /&gt;
     &lt;uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /&gt;
-</code></pre><div class="md-section-divider"></div><h2 data-anchor-id="808x" id="使用">使用</h2><ol data-anchor-id="8jjf">
+</code></pre><div class="md-section-divider"></div><h2 data-anchor-id="z149" id="使用">使用</h2><ol data-anchor-id="eis6">
 <li><p>初始化 <br>
 在Application的<code>onCreate()</code>方法中调用：  </p>
 
@@ -176,7 +177,7 @@ DroiMessageHandler为消息展示定制类，提供透传消息处理接口<code
     }
 });
 </code></pre></li>
-</ol><div class="md-section-divider"></div><h2 data-anchor-id="77kh" id="faq">FAQ</h2><div class="md-section-divider"></div><h3 data-anchor-id="b3h6" id="卓易推送支持哪些消息类型">卓易推送支持哪些消息类型？</h3><p data-anchor-id="jaxu">卓易推送支持通知栏消息和透传消息，具体介绍如下：  </p><ul data-anchor-id="0bgy">
+</ol><div class="md-section-divider"></div><h2 data-anchor-id="q5vf" id="faq">FAQ</h2><div class="md-section-divider"></div><h3 data-anchor-id="993p" id="卓易推送支持哪些消息类型">卓易推送支持哪些消息类型？</h3><p data-anchor-id="fvza">卓易推送支持通知栏消息和透传消息，具体介绍如下：  </p><ul data-anchor-id="n2n2">
 <li><p>通知栏消息 <br>
 在通知栏展示，用户点击通知的后续动作可以为打开应用、打开网页以及下载应用。展现形式主要分为普通通知消息、图片通知消息和大图通知消息。  </p>
 
@@ -185,7 +186,7 @@ DroiMessageHandler为消息展示定制类，提供透传消息处理接口<code
 <img src="http://baastest.droi.cn/Uploads/DocFile/57636d5beb711.png" alt="cmd-markdown-logo" title=""></p></li>
 <li><p>图片通知消息 <br>
 图片通知消息在通知栏中展示一张选定的图片 <br>
-<img src="http://baastest.droi.cn/Uploads/DocFile/57636e18a5f25.png" alt="cmd-markdown-logo" title=""></p></li>
+<img src="http://baastest.droi.cn/Uploads/DocFile/57636e18a5f25.png" alt="cmd-markdown-logo"></p></li>
 <li><p>大图通知消息 <br>
 大图通知消息将会在通知栏中展示一张选定的大图片，展示的效果更好，更直观 <br>
 <img src="http://baastest.droi.cn/Uploads/DocFile/57636e8e44111.png" alt="cmd-markdown-logo" title=""></p></li></ul>
@@ -195,21 +196,21 @@ DroiMessageHandler为消息展示定制类，提供透传消息处理接口<code
 除了通知栏消息外，卓易推送还支持透传方式传递消息。该方式直接将接收到的消息原封不动地传递给客户端应用，由应用决定如何处理接收到的消息。</p>
 
 <p><strong>注意：某些机型可能导致应用无法在后台启动，此时透传消息将无法到达目标应用</strong></p></li>
-</ul><div class="md-section-divider"></div><h3 data-anchor-id="nujb" id="卓易推送支持哪些消息控制类型">卓易推送支持哪些消息控制类型？</h3><ul data-anchor-id="rw68">
+</ul><div class="md-section-divider"></div><h3 data-anchor-id="unu9" id="卓易推送支持哪些消息控制类型">卓易推送支持哪些消息控制类型？</h3><ul data-anchor-id="ldj6">
 <li><p>即时消息 <br>
 推送消息到达推送目标后立即展示，展示后失效；</p></li>
 <li><p>定时消息 <br>
 推送消息到达目标后在规定时间段内展示，展示之后失效；</p></li>
 <li><p>循环消息 <br>
 推送目标接收到循环消息后间隔指定的时间循环展示；</p></li>
-</ul><div class="md-section-divider"></div><h3 data-anchor-id="rklw" id="卓易推送支持哪些通知提醒动作">卓易推送支持哪些通知提醒动作？</h3><p data-anchor-id="a381">支持通知展示时点亮呼吸灯、响铃和振动。</p><div class="md-section-divider"></div><h3 data-anchor-id="cdl5" id="什么是离线时间">什么是离线时间？</h3><p data-anchor-id="bze1">离线时间也可理解为推送消息的有效期，推送目标只有在有效期之内上线才会收到推送消息，超出有效期消息就会被丢弃处理。</p><div class="md-section-divider"></div><h3 data-anchor-id="3zkz" id="什么是单播组播和广播">什么是单播，组播和广播？</h3><ul data-anchor-id="98iz">
+</ul><div class="md-section-divider"></div><h3 data-anchor-id="i3o9" id="卓易推送支持哪些通知提醒动作">卓易推送支持哪些通知提醒动作？</h3><p data-anchor-id="75yg">支持通知展示时点亮呼吸灯、响铃和振动。</p><div class="md-section-divider"></div><h3 data-anchor-id="ehrc" id="什么是离线时间">什么是离线时间？</h3><p data-anchor-id="jb9v">离线时间也可理解为推送消息的有效期，推送目标只有在有效期之内上线才会收到推送消息，超出有效期消息就会被丢弃处理。</p><div class="md-section-divider"></div><h3 data-anchor-id="07bs" id="什么是单播组播和广播">什么是单播，组播和广播？</h3><ul data-anchor-id="hnfv">
 <li><p>单播目标 <br>
 推送平台可以通过deviceId指定单播消息的目标；</p></li>
 <li><p>组播目标 <br>
 提供接口给应用打标签，推送时可以选定推送目标为对应标签，推送服务器则向该标签的分组用户推送消息；</p></li>
 <li><p>群播目标 <br>
 推送服务器向该应用的所有用户推送消息；  </p></li>
-</ul><div class="md-section-divider"></div><h3 data-anchor-id="pum1" id="管理后台统计推送消息的哪些指标">管理后台统计推送消息的哪些指标？</h3><p data-anchor-id="iduv">开发者可以在推送平台上查看用用推送统计数据，对推送的信息进行分析。以下是推送数据统计的指标：</p><ul data-anchor-id="m117">
+</ul><div class="md-section-divider"></div><h3 data-anchor-id="hqed" id="管理后台统计推送消息的哪些指标">管理后台统计推送消息的哪些指标？</h3><p data-anchor-id="29eo">开发者可以在推送平台上查看用用推送统计数据，对推送的信息进行分析。以下是推送数据统计的指标：</p><ul data-anchor-id="38vs">
 <li><p>已推送消息数：单播消息、组播消息和群发消息数；</p></li>
 <li><p>送达消息数：已经接收到消息的数量；</p></li>
 <li><p>通知展示数量：展示在通知栏消息的数量；</p></li>
